# workbench

./: README.md  launch.py  pyproject.toml  requirements.txt  run.py  setup.py
workbench/: __init__.py  __main__.py  _version.py  config.py  database.py  database_browser.py  gui.py  main.py  sql_editor.py
